<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/national_flag"
        android:id="@+id/question2"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        ></TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question2"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color1"
            android:id="@+id/color1"
            android:textSize="@dimen/text_size"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color2"
            android:id="@+id/color2"
            android:textSize="@dimen/text_size"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color3"
            android:id="@+id/color3"
            android:textSize="@dimen/text_size"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color4"
            android:id="@+id/color4"
            android:textSize="@dimen/text_size"
            />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/next"
        android:id="@+id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        android:onClick="nextClicked"
        android:textSize="@dimen/text_size"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>