<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crickter"
        android:id="@+id/question2"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        ></TextView>
       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/radioGroup"
           app:layout_constraintTop_toBottomOf="@id/question2"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginTop="@dimen/top_margin"
           >
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/opt1"
           android:text="@string/crickter_name1"
           android:textSize="@dimen/text_size"
           android:onClick="radioChecked"></RadioButton>
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/opt2"
           android:text="@string/crickter_name2"
           android:textSize="@dimen/text_size"
           android:onClick="radioChecked"></RadioButton>
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/opt3"
           android:text="@string/crickter_name3"
           android:textSize="@dimen/text_size"
           android:onClick="radioChecked"></RadioButton>
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/opt4"
           android:text="@string/crickter_name4"
           android:textSize="@dimen/text_size"
           android:onClick="radioChecked"></RadioButton>
       </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/next"
        android:id="@+id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        android:onClick="nextClicked"
        android:textSize="@dimen/text_size"
        ></Button>

</androidx.constraintlayout.widget.ConstraintLayout>